[package]
name = "tiles"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy= {version = "0.14", default-features =false, features = [
	"bevy_render",
	"bevy_winit",
	"bevy_asset",
	"png",
	"bevy_core_pipeline"
]}
bevy_ecs_ldtk = "0.10.0"
bevy_pancam = "0.12.0"



[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3
